fix typos and add validation

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -16,7 +16,7 @@
     </div>
   </nav>
   <div class="container">
-    <p>ec2metadata supports multiple profiles which are discovered from <code>~/.aws/credentials</code>.  Select the profile here and it will be used to authorize future requets
+    <p>ec2metadata supports multiple profiles which are discovered from <code>~/.aws/credentials</code>.  Select the profile here and it will be used to authorize future requests
     listing and assuming the roles and discovering your MFA token's serial.
     </p>
 
@@ -44,7 +44,7 @@
     Duration (Seconds): <input type=number name='profile_mfa_time' value='86400'></input>
     </p>
     <p>
-    <input type=submit>Select</input>
+    <input type=submit></input>
     </p>
     </form>
   </div>
