--- a/views/index.erb
+++ b/views/index.erb
@@ -38,7 +38,7 @@
   <table>
     <tr>
       <td>Role</td>
-      <td><input name='role' list='roles' style="width: 500px;" autocomplete="off">
+      <td><input name='role' list='roles' style="width: 500px;" autocomplete="off" required>
       <datalist id='roles'>
       <% roles.each do |role|
         %><option value='<%= role %>'><%= role.gsub(/.*:role\//, '' ) %></option>
@@ -69,7 +69,7 @@
       </td>
     </tr>
     <tr><td>Duration</td>
-      <td><input name='duration' value='1800' style="width:150px;"></input></td>
+      <td><input type='number' name='duration' min='900', max='3600' value='1800' style="width:150px;" required></input></td>
     </tr>
     <tr>
       <td>MFA Token</td>
@@ -99,6 +99,7 @@
     <% end %>
   </div>
   <!-- Latest compiled and minified JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
